fix: use align-items: flex-start

--- a/wp-content/themes/adelanteandalucia/resources/assets/styles/layouts/_footer.scss
+++ b/wp-content/themes/adelanteandalucia/resources/assets/styles/layouts/_footer.scss
@@ -12,13 +12,13 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: flex-start;
   }
 
   &__logo {
     display: block;
     max-width: 150px;
     margin: 0 0 gap(6) 0;
-    object-fit: contain;
   }
 
   &__social {
